Fixed new error with section spacing once merged

--- a/css/index.css
+++ b/css/index.css
@@ -366,7 +366,7 @@ footer p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 5% 5% 5% 5%;
+  margin: 12% 5% 5% 5%;
   width: 90%;
   height: 100%;
   background-color: white;
